fix for deploying SE in TAP